Fix mobile layout issues discovered post deployment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,7 +44,7 @@ for layout and styling purposes.
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-block: var(--spacing-small);
+  margin-block: var(--spacing-medium);
 }
 
 .nav-links-lg-container {
@@ -122,6 +122,7 @@ as required by the project design guidelines. */
 
 .logo-wrapper {
   height: 25px;
+  width: max-content;
 }
 
 .top-img-wrapper {
